<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="32dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/tv_filter_title"
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/header_filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Food Type -->
    <ImageView
        android:id="@+id/iv_category"
        style="@style/AppTheme.FilterIcon"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        android:tint="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/tv_filter_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_title"
        app:srcCompat="@drawable/ic_fastfood_white_24dp" />

    <Spinner
        android:id="@+id/sp_category"
        style="@style/AppTheme.FilterSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/categories"
        app:layout_constraintBottom_toBottomOf="@+id/iv_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_category"
        app:layout_constraintTop_toTopOf="@+id/iv_category" />

    <!-- Location -->

    <ImageView
        android:id="@+id/iv_city"
        style="@style/AppTheme.FilterIcon"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:tint="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/sp_city"
        app:layout_constraintEnd_toEndOf="@+id/iv_category"
        app:layout_constraintStart_toStartOf="@+id/iv_category"
        app:layout_constraintTop_toTopOf="@+id/sp_city"
        app:srcCompat="@drawable/ic_place_white_24px" />

    <Spinner
        android:id="@+id/sp_city"
        style="@style/AppTheme.FilterSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/cities"
        app:layout_constraintEnd_toEndOf="@+id/sp_category"
        app:layout_constraintStart_toStartOf="@+id/sp_category"
        app:layout_constraintTop_toBottomOf="@+id/sp_category" />

    <!-- Price -->

    <ImageView
        android:id="@+id/iv_price"
        style="@style/AppTheme.FilterIcon"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:tint="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/sp_price"
        app:layout_constraintEnd_toEndOf="@+id/iv_city"
        app:layout_constraintStart_toStartOf="@+id/iv_city"
        app:layout_constraintTop_toTopOf="@+id/sp_price"
        app:srcCompat="@drawable/ic_monetization_on_white_24px" />

    <Spinner
        android:id="@+id/sp_price"
        style="@style/AppTheme.FilterSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/prices"
        app:layout_constraintEnd_toEndOf="@+id/sp_city"
        app:layout_constraintStart_toStartOf="@+id/sp_city"
        app:layout_constraintTop_toBottomOf="@+id/sp_city" />

    <!-- Sort by -->

    <ImageView
        android:id="@+id/iv_sort"
        style="@style/AppTheme.FilterIcon"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:tint="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/sp_sort"
        app:layout_constraintEnd_toEndOf="@+id/iv_price"
        app:layout_constraintStart_toStartOf="@+id/iv_price"
        app:layout_constraintTop_toTopOf="@+id/sp_sort"
        app:srcCompat="@drawable/ic_sort_white_24px" />

    <Spinner
        android:id="@+id/sp_sort"
        style="@style/AppTheme.FilterSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/sort_by"
        app:layout_constraintEnd_toEndOf="@+id/sp_price"
        app:layout_constraintStart_toStartOf="@+id/sp_price"
        app:layout_constraintTop_toBottomOf="@+id/sp_price" />

    <!-- Cancel and apply buttons -->


    <Button
        android:id="@+id/bn_cancel"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:textColor="@color/greySecondary"
        android:theme="@style/ThemeOverlay.FilterButton"
        app:layout_constraintEnd_toStartOf="@+id/bn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bn_search" />

    <Button
        android:id="@+id/bn_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:text="@string/apply"
        android:theme="@style/ThemeOverlay.FilterButton"
        app:layout_constraintEnd_toEndOf="@+id/sp_sort"
        app:layout_constraintTop_toBottomOf="@+id/sp_sort" />


</androidx.constraintlayout.widget.ConstraintLayout>

