<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haanhgs.shoppingtest.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0E0E0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbr_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:logo="@drawable/ic_restaurant_white_24px"
            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
            app:title="@string/app_name"
            app:titleMarginStart="24dp"
            app:titleTextColor="@android:color/white" />

        <FrameLayout
            android:id="@+id/fl_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tbr_main"
            android:background="?attr/colorPrimary"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tbr_main">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/bn_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:tint="@color/greySecondary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_filter_list_white_24px" />

                    <TextView
                        android:id="@+id/tv_current_filter"
                        style="@style/AppTheme.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/all_restaurants"
                        android:textColor="@color/greySecondary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/bn_clear_filter"
                        app:layout_constraintStart_toEndOf="@+id/bn_filter"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Filter" />

                    <TextView
                        android:id="@+id/tv_current_sort_by"
                        style="@style/AppTheme.Caption"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sorted_by_rating"
                        android:textColor="@color/greyDisabled"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_current_filter"
                        app:layout_constraintStart_toStartOf="@+id/tv_current_filter"
                        app:layout_constraintTop_toBottomOf="@+id/tv_current_filter" />

                    <ImageView
                        android:id="@+id/bn_clear_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:tint="@color/greySecondary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_close_white_24px" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <!-- Main Restaurants recycler -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_shadow"
            tools:listitem="@layout/recycler_item_restaurant" />

        <!-- Shadow below toolbar -->
        <View
            android:id="@+id/view_shadow"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/bg_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_bar" />

        <!-- Empty list (pizza guy) view -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_empty"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_shadow"
            tools:ignore="UseCompoundDrawables"
            tools:visibility="gone"
            >

            <ImageView
                android:id="@+id/imageView"
                style="@style/AppTheme.PizzaGuy"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pizza_monster"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/AppTheme.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/message_no_results"
                android:textColor="@color/greyDisabled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
