<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haanhgs.shoppingtest.MainActivity">

    <RelativeLayout
        android:id="@+id/cvRestaurantTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/ivRestaurant"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:alpha="1.0"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            tools:src="@drawable/food_1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/gradient_up" />

        <!-- Back button -->
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvName"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_close_white_24px" />

        <TextView
            android:id="@+id/tvName"
            style="@style/AppTheme.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mrbRestaurant"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="Some Restaurant" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/mrbRestaurant"
            style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@+id/tvCategory"
            android:layout_alignStart="@+id/tvName"
            app:mrb_progressTint="@android:color/white"
            app:mrb_secondaryProgressTint="@android:color/white" />

        <TextView
            android:id="@+id/tvNumRating"
            style="@style/AppTheme.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mrbRestaurant"
            android:layout_alignTop="@+id/mrbRestaurant"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/mrbRestaurant"
            android:gravity="center"
            android:textColor="@android:color/white"
            tools:text="(10)" />

        <TextView
            android:id="@+id/tvCategory"
            style="@style/AppTheme.Subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivRestaurant"
            android:layout_alignStart="@+id/tvName"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            tools:text="Italian" />

        <TextView
            android:id="@+id/restaurant_city_divider"
            style="@style/AppTheme.TextDivider"
            android:layout_alignTop="@+id/tvCategory"
            android:layout_toEndOf="@+id/tvCategory"
            android:text="@string/divider_bullet"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvCity"
            style="@style/AppTheme.Subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvCategory"
            android:layout_below="@+id/tvCategory"
            android:layout_toEndOf="@+id/restaurant_city_divider"
            android:textColor="@android:color/white"
            tools:text="San Francisco" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/AppTheme.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/tvName"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="$$$" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cvRestaurantTop"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-28dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_add_white_24px"
        tools:ignore="RelativeOverlap" />

    <!-- Ratings -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRestaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvRestaurantTop"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        android:paddingTop="28dp"
        android:visibility="gone"
        tools:listitem="@layout/recycler_item_rating" />

    <!-- View for empty ratings -->
    <LinearLayout
        android:id="@+id/lnEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/cvRestaurantTop"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            style="@style/AppTheme.PizzaGuy"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pizza_monster" />

        <TextView
            style="@style/AppTheme.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_no_reviews"
            android:textColor="@color/greyDisabled" />

    </LinearLayout>

</RelativeLayout>
